fix overlap over the buttons

--- a/components/scrollButton/scrollButton.module.scss
+++ b/components/scrollButton/scrollButton.module.scss
@@ -9,15 +9,7 @@
     width: 100%;
     height: 100%;
   }
-  &::after {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    content: "";
-    width: 100%;
-    height: 80%;
-   
-  }
+
   .button {
     a {
       position: absolute;
@@ -33,7 +25,6 @@
       text-decoration: none;
       transition: all 0.3s;
       &:hover {
-          
         opacity: 0.8;
       }
     }
